# pynetevents

./: .coveragerc  .gitignore  .prettierrc  .pylintrc  LICENSE  README.md  events.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  tools.ps1
.github/workflows/: build_docs.yml  publish.yml  python-ci.yml
docs/: conf.py  duplicate_eventlistener_error.rst  event.rst  event_execution_error.rst  eventslot.rst  eventslot_weakref.rst  index.rst  mainpage.md
src/: __init__.py
src/pynetevents/: __init__.py  events.py
src/pynetevents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: event_attribute_test.py  event_test.py  eventdescriptor_test.py  eventslot_ref_test.py  eventslot_test.py
