[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynetevents"
version = "0.1.0"
description = "Python implementation of C# style events"
readme = "README.md"
authors = [{ name = "Dr0f0x"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["events", "csharp", "patterns"]
dependencies = [
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov", "pytest-asyncio", "bumpver"]
packaging = ["build", "twine"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/pynetevents/__init__.py" = ["{version}"]